# ValaCopy

./: Main  cross-file.txt  meson.build
src/: Application.vala  Clip.vala  Clipboard.vala  ClipboardList.vala  Data.vala  HeaderBar.vala  Main.vala  Menu.vala  Settings.vala  Window.vala  com.github.Maxx730.kcopy.gschema.xml
